<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pi.stockquotes.StockInfoActivity">

    <TableRow>
        <TextView
            android:id="@+id/companyNameTextView"
            android:text="@string/company_name"
            android:padding = "5dp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/daysHighTextView"
            android:text="@string/stock_days_high"
            android:padding = "5dp"
            android:layout_weight="1"/>


    <TextView
        android:id="@+id/daysLowTextView"
        android:text="@string/stock_days_low"
        android:padding = "5dp"
        android:layout_weight="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/yearHighTextView"
            android:text="@string/stock_year_high"
            android:padding = "5dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/yearLowTextView"
            android:text="@string/stock_year_low"
            android:padding = "5dp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/lastPriceTextView"
            android:text="@string/last_trade_price_only"
            android:padding = "5dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/changeTextView"
            android:text="@string/change"
            android:padding = "5dp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/dailyPriceRangeTextView"
            android:text="@string/days_range"
            android:padding = "5dp"
            android:layout_weight="1"/>



    </TableRow>

</TableLayout>
